--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.es linguist-language=JS
-*.js linguist-detectable
-icg-frontend/src -linguist-detectable
+* linguist-vendored
+*.js linguist-vendored=false
+*.py linguist-vendored=false
+*.ipynb linguist-vendored=false
